--- a/src/App.css
+++ b/src/App.css
@@ -7,16 +7,18 @@
 
 }
 .inputContainer{
+  padding: 0;
   display: flex;
   align-items: center;
 }
 
 input{
-  margin-left: 10px;
+  
   border: none;
   text-decoration: none;
   color: white;
   background-color: black;
   outline: none;
   caret-color: white;
+  font-size: 1em;
 }
