--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: black;
+  overflow-y: hidden;
   font-family: -apple-system, BlinkMacSystemFont,'Inconsolata', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
